# hackathon2013EntryAssignment

./: REAMDE.md
Abgabe_0856777/wheeled_robin_description/robots/: wheeled_robin_kinect.urdf.xacro
Abgabe_0856777/wheeled_robin_description/urdf/: wheeled_robin.urdf.xacro  wheeled_robin_gazebo.urdf.xacro  wheeled_robin_kinect.urdf.xacro  wheeled_robin_kinect_gazebo.urdf.xacro  wheeled_robin_library.urdf.xacro  wheeled_robin_properties.urdf.xacro
Abgabe_0856777/wheeled_robin_sim_bringup/: CMakeLists.txt  package.xml
Abgabe_0856777/wheeled_robin_sim_bringup/launch/: wheeled_robin_sim.launch
back_beep_pkg/: CMakeLists.txt  package.xml
back_beep_pkg/launch/: turtle_back_beep.launch
back_beep_pkg/src/: listener.cpp  talker.cpp
drive_circle/: CMakeLists.txt  CMakeLists.txt~  package.xml  readme  readme~
drive_circle/launch/: drive_circle_server.launch  drive_circle_server.launch~  rviz_config.rviz
drive_circle/src/: .kdev_include_paths  drive_circle_client.cpp  drive_circle_client.cpp~  drive_circle_server.cpp  drive_circle_server.cpp~
drive_circle/srv/: drive_circle.srv  drive_circle.srv~
filter_depth_image_nodelet/: CMakeLists.txt  CMakeLists.txt~  package.xml
filter_depth_image_nodelet/launch/: depth_image_filter.launch~  filter_depth_image.launch  filter_depth_image.launch~  robot.rviz
filter_depth_image_nodelet/src/: filter_depth_image.cpp
left_hand_marker/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
left_hand_marker/launch/: kinect.rviz  start_hand_marker.launch  start_hand_marker.launch~
left_hand_marker/src/: left_hand_marker.cpp~
line_ident/: CMakeLists.txt  package.xml
line_ident/launch/: line_ident.launch  line_ident_rviz.rviz
line_ident/src/: line_ident.cpp
nodelet_color_filter/: CMakeLists.txt  nodelets.xml  package.xml
nodelet_color_filter/launch/: start.launch
nodelet_color_filter/rviz/: redchannel.rviz
nodelet_color_filter/src/: ImageConverter.cpp
nodelet_color_filter/worlds/: ground.world
point_cloud_transformer/: CMakeLists.txt  nodelet_PC2_transformer.xml  package.xml
point_cloud_transformer/launch/: point_cloud_transformer.launch
point_cloud_transformer/src/: point_cloud_transform.cpp
point_cloud_transformer_test/: CMakeLists.txt  package.xml
point_cloud_transformer_test/launch/: RVIZ_rob.rviz  point_cloud_transformer_test.launch
point_cloud_transformer_test/src/: point_cloud_trans.cpp
redChannel/: CMakeLists.txt~  package.xml~
redChannel/launch/: start_conv.launch
redChannel/rviz_config/: redchannel.rviz
redChannel/src/: extractRed.cpp
redChannel/world_config/: test_redchannel.world
test/: manifest.xml
