<?xml version="1.0"?>
<package>
  <name>filter_depth_image_nodelet</name>
  <version>0.0.0</version>
  <description>The filter_depth_image_nodelet package</description>
  <maintainer email="lukas_schwarz@gmx.at">lukas</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/filter_depth_image_nodelet</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transpor</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transpor</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
</package>
