<?xml version="1.0"?>
<package>
  <name>left_hand_marker</name>
  <version>0.1.0</version>
  <description>The left_hand_marker package</description>

  <maintainer email="johannesreisenberger@gmx.at">Johannes</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/left_hand_marker</url>
  <author email="johannesreisenberger@gmx.at">Johannes Reisenberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
