<?xml version="1.0"?>
<package>
  <name>wheeled_robin_sim_bringup</name>
  <version>1.0.0</version>
  <description>The wheeled_robin_sim_bringup package provides launch files for a WheeledRobin.</description>
  <maintainer email="l.retschi@gmx.at">lukas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>wheeled_robin_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_plugins</run_depend>


  <export>
  </export>
</package>
